# mcs-agent-tools

./: .env.example  .gitignore  README.md  main.py  mcs_models.py  mcs_parser.py  mcs_renderer.py  mcs_timeline.py  mcs_transcript.py  models.py  pyproject.toml  renamer.py  rxconfig.py  validator.py  visualizer.py
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
best_practices/: gpt41.md  gpt41mini.md  gpt41nano.md  gpt5.md  gpt5chat.md  o1.md  o3.md  o4mini.md
tests/: test_renamer.py
web/: components.py  mermaid.py  state.py  web.py
